fixSingletone